[package]
name = "semgrep-rs"
version = "0.1.0"
authors = ["Parsia"]
description = "Rust library to parse and interact with Semgrep rules."
license = "MIT OR Apache-2.0"
repository = "https://github.com/parsiya/semgrep-rs"
edition = "2021"
rust-version = "1.58"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
serde_with = "2.0.1"
walkdir = "2"