[package]
name = "semgrep-rs"
version = "0.1.0"
authors = ["Parsia"]
description = "Rust library to interact with Semgrep."
license = "MIT OR Apache-2.0"
repository = "https://github.com/parsiya/semgrep-rs"
edition = "2021"
rust-version = "1.58"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
serde_with = "2.0.1"
walkdir = "2"
log = "0.4"
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
test-case = "2.2.2"
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
log4rs = "1.2.0"